<resources>
    <string name="app_name">视频监控</string>
    <string name="action_settings">Settings</string>
    <string name="input_user_name">输入帐号</string>
    <string name="input_password">输入密码</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_login">用户登录</string>
    <string name="video_rt_upload">视频实时上传</string>
    <string name="video_rt_monitor">视频实时监控</string>
    <string name="photo_capture_upload">拍照上传</string>
    <string name="photo_rt_monitor">图片实时监控</string>
    <string name="main_menu">主菜单</string>
    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="video">Video Settings</string>
    <string name="save">OK</string>
    <string name="username">Username</string>
    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">测试</string>
    <string name="user_list">用户列表</string>
    <string name="input_video_frame_rate">输入视频采样率</string>
    <string name="input_video_bitrate">输入视频比特率</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="input_server_ip">输入服务器IP</string>
    <string name="off">关闭</string>
    <string name="server_config">请配置服务器</string>
    <string name="video_config">请配置视频参数</string>
    <string name="input_all">请填写完整</string>
    <string name="input_mail">输入邮箱</string>
    <string name="input_nickname">输入昵称</string>
    <string name="one_key_register">一键注册</string>
    <string name="user_register">用户注册</string>
    <string name="register_succ">注册成功</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_not_same">两次输入的密码不一致</string>
    <string name="photo_view">图片浏览</string>
    <string name="data_change">资料修改</string>
    <string name="user_name_change">用户名修改</string>
    <string name="nick_name_change">昵称修改</string>
    <string name="mail_change">邮箱修改</string>
    <string name="online_users">在线用户</string>
</resources>
