<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Spinner
        android:id="@+id/spn_video_size"
        style="@style/common_edit"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/edt_video_frame_rate"
        style="@style/common_edit"
        android:focusable="false"
        android:layout_width="match_parent"
        android:hint="@string/input_video_frame_rate"/>

    <EditText
        android:id="@+id/edt_video_bitrate"
        style="@style/common_edit"
        android:focusable="false"
        android:layout_width="match_parent"
        android:hint="@string/input_video_bitrate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            style="@style/common_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"/>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/common_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>